--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,15 +6,15 @@
 }
 
 .mat-column-demo-position {
-  width: 32px;
+  width: 2vw;
   border-right: 1px solid currentColor;
-  padding-right: 24px;
+  padding-right: 1.1vw;
   text-align: center;
 }
 
 .mat-column-demo-name {
-  padding-left: 16px;
-  font-size: 0.8vw;
+  padding-left: 1.2vw;
+  font-size: 1.3vw;
   padding-top: 1px;
 }
 
