--- a/src/styles.css
+++ b/src/styles.css
@@ -23,7 +23,7 @@ h2{
     padding: 0.3vw;
 }
 img{
-    max-width: 3vw;
+    max-width: 6vh;
     aspect-ratio: 1;
     border-radius: 50%;
     object-fit:cover;
