--- a/src/styles.css
+++ b/src/styles.css
@@ -21,10 +21,13 @@ h2{
     background-color: aliceblue;
     border-radius: 20px;
     padding: 0.3vw;
+    padding-left: 0.5vw;
+    padding-right: 0.5vw;
 }
 img{
     max-width: 6vh;
     aspect-ratio: 1;
     border-radius: 50%;
+    padding: 1px;
     object-fit:cover;
 }
