--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,6 @@ img{
     max-width: 6vh;
     aspect-ratio: 1;
     border-radius: 50%;
-    padding: 1px;
+    padding-top: 2px;
     object-fit:cover;
 }
